Fix visibility of text, if parent-element is alignt right.

--- a/logo.css
+++ b/logo.css
@@ -19,6 +19,7 @@
   left: 0;
   padding: 0;
   margin: 0;
+  text-align: left;
   text-indent: -9999px; /* image replacement */
   background-position: center center;
   background-repeat: no-repeat;
